--- a/flightanima.html
+++ b/flightanima.html
@@ -50,7 +50,7 @@
                 <div class="flex flex-col md:flex-row items-center gap-6 w-full lg:w-auto flex-1">
                     <!-- ダッシュボードへ戻るボタン -->
                     <div class="relative w-full md:w-auto shrink-0">
-                        <button onclick="location.href='index.html'"
+                        <button id="back-to-dashboard-btn"
                             class="w-full md:w-auto bg-gray-600 hover:bg-gray-700 text-white font-semibold py-2 px-6 rounded-lg shadow transition duration-200 flex items-center justify-center gap-2">
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24"
                                 stroke="currentColor">
@@ -354,6 +354,16 @@
             // Dashboardや外部共有リンクからの自動読み込みチェック
             const urlParams = new URLSearchParams(window.location.search);
             const flightId = urlParams.get('flightId');
+            const urlDate = urlParams.get('date');
+
+            // 戻るボタンの挙動：URLにdateがあればそれを引き継ぐ
+            document.getElementById('back-to-dashboard-btn').onclick = () => {
+                if (urlDate) {
+                    window.location.href = `index.html?date=${urlDate}`;
+                } else {
+                    window.location.href = 'index.html';
+                }
+            };
 
             if (flightId) {
                 fileNameDisplay.textContent = "クラウドデータを読み込み中...";
