--- a/flightanima.html
+++ b/flightanima.html
@@ -133,23 +133,77 @@
             <!-- SVGキャンバス -->
             <div class="w-full h-[500px] sky-bg relative">
                 <!-- スピードメーター (右上に配置) -->
-                <div id="speedometer-container"
-                    class="absolute top-4 right-4 z-10 bg-white/20 backdrop-blur-sm rounded-full p-2 border border-white/30 shadow-lg hidden">
-                    <svg width="120" height="120" viewBox="0 0 100 100">
-                        <!-- 背景円 -->
-                        <circle cx="50" cy="50" r="45" fill="rgba(0,0,0,0.5)" stroke="#fff" stroke-width="2" />
-                        <!-- 目盛り (簡易) -->
-                        <path d="M 20 80 A 42.4 42.4 0 1 1 80 80" fill="none" stroke="#fff" stroke-width="2"
-                            stroke-dasharray="1 5" />
-                        <!-- 針 -->
-                        <line id="speed-needle" x1="50" y1="50" x2="50" y2="15" stroke="#ef4444" stroke-width="3"
-                            stroke-linecap="round" transform="rotate(-120, 50, 50)" />
-                        <circle cx="50" cy="50" r="4" fill="#fff" />
-                        <!-- 現在速度テキスト -->
-                        <text id="speed-value" x="50" y="70" text-anchor="middle" fill="#fff" font-size="16"
-                            font-weight="bold" font-family="monospace">0</text>
-                        <text x="50" y="82" text-anchor="middle" fill="#ccc" font-size="8"
-                            font-family="sans-serif">km/h</text>
+                <div id="speedometer-container" class="absolute top-4 right-4 z-20 w-32 h-32 rounded-full hidden" style="background: radial-gradient(circle at center, rgba(15, 23, 42, 0.8) 0%, rgba(2, 6, 23, 0.95) 100%);
+                           box-shadow: inset 0 0 20px rgba(56, 189, 248, 0.3), 0 10px 25px rgba(0, 0, 0, 0.4), 0 0 0 1px rgba(255, 255, 255, 0.1);
+                           backdrop-filter: blur(10px);">
+
+                    <svg width="100%" height="100%" viewBox="0 0 100 100" class="absolute inset-0">
+                        <!-- 装飾的な外周リング -->
+                        <circle cx="50" cy="50" r="48" fill="none" stroke="rgba(255, 255, 255, 0.05)"
+                            stroke-width="1" />
+                        <circle cx="50" cy="50" r="46" fill="none" stroke="url(#speed-gradient)" stroke-width="0.5"
+                            opacity="0.5" />
+
+                        <!-- グラデーション定義 -->
+                        <defs>
+                            <linearGradient id="speed-gradient" x1="0%" y1="100%" x2="100%" y2="0%">
+                                <stop offset="0%" stop-color="#38bdf8" /> <!-- Light Blue -->
+                                <stop offset="50%" stop-color="#818cf8" /> <!-- Indigo -->
+                                <stop offset="100%" stop-color="#f43f5e" /> <!-- Rose/Red -->
+                            </linearGradient>
+
+                            <filter id="glow">
+                                <feGaussianBlur stdDeviation="2" result="coloredBlur" />
+                                <feMerge>
+                                    <feMergeNode in="coloredBlur" />
+                                    <feMergeNode in="SourceGraphic" />
+                                </feMerge>
+                            </filter>
+                        </defs>
+
+                        <!-- 目盛り (背景アーチ) -->
+                        <path d="M 20 80 A 42.4 42.4 0 1 1 80 80" fill="none" stroke="rgba(255,255,255,0.1)"
+                            stroke-width="4" stroke-linecap="round" />
+
+                        <!-- 目盛り (色付きアーチ - JSで長さを変えても良いが今回はグラデーションベースで固定) -->
+                        <path id="speed-arc" d="M 20 80 A 42.4 42.4 0 1 1 80 80" fill="none"
+                            stroke="url(#speed-gradient)" stroke-width="4" stroke-linecap="round" opacity="0.3" />
+
+                        <!-- 細かい目盛り線 -->
+                        <g stroke="rgba(255,255,255,0.4)" stroke-width="1">
+                            <!-- 0 -->
+                            <line x1="20" y1="80" x2="24" y2="76" />
+                            <!-- 1/4 -->
+                            <line x1="14" y1="50" x2="19" y2="50" />
+                            <!-- 1/2 -->
+                            <line x1="50" y1="8" x2="50" y2="13" />
+                            <!-- 3/4 -->
+                            <line x1="86" y1="50" x2="81" y2="50" />
+                            <!-- Max -->
+                            <line x1="80" y1="80" x2="76" y2="76" />
+                        </g>
+
+                        <!-- デジタル速度表示 (中央) -->
+                        <text id="speed-value" x="50" y="44" text-anchor="middle" fill="#f8fafc" font-size="22"
+                            font-weight="900" font-family="'Inter', sans-serif"
+                            style="text-shadow: 0 0 10px rgba(56, 189, 248, 0.5); letter-spacing: -1px;">0</text>
+                        <text x="50" y="55" text-anchor="middle" fill="#94a3b8" font-size="7" font-weight="600"
+                            font-family="'Inter', sans-serif" letter-spacing="1">KM/H</text>
+
+                        <!-- 針 (モダンな三角形) -->
+                        <g id="speed-needle" transform="rotate(-120, 50, 50)"
+                            style="transition: transform 0.1s ease-out;">
+                            <polygon points="48,50 50,15 52,50" fill="url(#speed-gradient)" filter="url(#glow)" />
+                            <polygon points="50,15 52,50 50,54" fill="#fff" opacity="0.3" /> <!-- ハイライト -->
+                            <!-- 針の土台 -->
+                            <circle cx="50" cy="50" r="6" fill="#1e293b" />
+                            <circle cx="50" cy="50" r="3" fill="#38bdf8" />
+                            <circle cx="50" cy="50" r="8" fill="none" stroke="rgba(255,255,255,0.2)" stroke-width="1" />
+                        </g>
+
+                        <!-- 下部の装飾 -->
+                        <path d="M 35 90 Q 50 85 65 90" fill="none" stroke="rgba(56, 189, 248, 0.5)" stroke-width="1"
+                            filter="url(#glow)" />
                     </svg>
                 </div>
 
